# Mii.fu

./: .gitignore  CMakeLists.txt  GENERATING.txt  LICENSE  README.md
.github/workflows/: fflresource-tests.yml  v3storedata-tests.yml
examples/LoadResource/: CMakeLists.txt  Main.cpp
include/: miifu.hpp
src/: FFLResource.fu
tests/: futdownload.py
tests/gltfvalidate/: config.yml  validate.py
tests/miis/: bulktest.py  bulkwrite.py
tests/miis/public/: testmii.ffsd  testmii.ffsd.test.json
tests/resource/: FFLResource.py  test.py
